--- a/extension/options/style.css
+++ b/extension/options/style.css
@@ -20,7 +20,7 @@ label > input[type="radio"] {
 label > input[type="number"] {
   width: 80px;
   padding: 6px 8px;
-  margin-left: 8px;
+  margin: 0 8px;
 }
 
 @media only screen and (max-width: 480px) {
