--- a/extension/popup/style.css
+++ b/extension/popup/style.css
@@ -3,3 +3,14 @@ html {
   width: fit-content;
   font-family: system-ui, sans-serif;
 }
+h1 {
+  position: sticky;
+  top: 0;
+  margin: 0;
+  background: var(--bg-primary);
+  padding: 0.67em 0;
+  z-index: 1;
+}
+p {
+  margin-top: 0
+}
